style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    padding: 0;
}

#calc-container {
    height: 750px;
    width: 600px;
    border: 1px solid black;
    padding: 10px;
    border-radius: 15px;;
    display: flex;
    flex-direction: column;
    background-color: rgb(155, 230, 152);
}

#calc-buttons {
    display: flex;
    flex-direction: column;
    flex: 1;
}
#calc-display {
    display: flex;
    justify-content: flex-end;
    align-items: end;
    height: 200px;
    font-size: 3.5em;
    font-family: 'Archivo', 'Times New Roman', Times, serif;
}

#calc-eqdel {
    display: flex;
    height: 100px;
    gap: 3px;
    margin-bottom: 3px;
    margin-top: 8px;
}

#clear {
    background-color: aquamarine;
}

.operator {
    background-color: rgb(121, 181, 236);
}

#del,
#eq {
    flex: 1;
    text-align: center;
    background-color: orangered;
    font-family: "Archivo", 'Times New Roman', Times, serif;
}

#calc-numbop {
    flex: 1;
    display: flex;
    gap: 3px;
    
}

.button-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 3px;
}

#display-wrapper {
    background-color: rgb(212, 233, 233);
    border: 2px solid black;
}

button {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    border-radius: 30px;
    font-family: "Archivo", 'Times New Roman', Times, serif;
    font-size: 2em;
}

#calc-array {
    height: 40px;
    margin-top: 8px;
    margin-left: 8px;
    font-family: "Archivo", 'Times New Roman', Times, serif;
    font-size: 2em;
}

